# singletons

./: .travis.yml  README.md  cabal.project
singletons/: CHANGES.md  README.md  singletons.cabal
singletons-batteries/: CHANGES.md  Makefile  README.md  Setup.hs  singletons-batteries.cabal
singletons-batteries/src/Data/Singletons/: Decide.hs  Names.hs  ShowSing.hs  Sigma.hs  SomeSing.hs  TypeLits.hs  TypeRepTYPE.hs
singletons-batteries/src/Data/Singletons/Prelude/: Bool.hs  Const.hs  Eq.hs  Foldable.hs  Instances.hs  Num.hs  Show.hs  Traversable.hs  Void.hs
singletons-batteries/src/Data/Singletons/Prelude/Semigroup/: Internal.hs
singletons-batteries/src/Data/Singletons/Single/: Monad.hs
singletons-batteries/src/Data/Singletons/TypeLits/: Internal.hs
singletons-batteries/tests/: SingletonsTestSuiteUtils.hs
singletons-batteries/tests/compile-and-dump/Promote/: GenDefunSymbols.golden
singletons-batteries/tests/compile-and-dump/Singletons/: T178.golden  T358.golden
singletons-th/: CHANGES.md  singletons-th.cabal
singletons-th/src/Data/Singletons/TH/: Single.hs  Util.hs
singletons-th/src/Data/Singletons/TH/Single/: Data.hs  Type.hs
singletons/src/Data/: Singletons.hs
singletons/src/Data/Singletons/: ShowSing.hs
